# MemoryPractice

./: README.md
ClothingCollection/: main.cpp
ClothingCollection/headers/: Clothing.hpp  Pants.hpp  Shirt.hpp  Shoe.hpp  Wardrobe.hpp  catch.hpp
ClothingCollection/src/: Clothing.cpp  Pants.cpp  Shirt.cpp  Shoe.cpp  Wardrobe.cpp
ClothingCollection/tests/: tests.cpp
Deque/: CMakeLists.txt  main.cpp
Deque/header/: Deque.hpp  catch.hpp
Deque/src/: Deque.cpp
Deque/test/: test-main.cpp  test1.cpp
Experimenting2/: Experimenting2.cbp  Makefile  cmake_install.cmake
Experimenting2/header/: catch.hpp
Experimenting2/src/: ListNode.cpp
Experimenting2/test/: linkedTests.cpp  tests-main.cpp
Experimenting3/: CMakeLists.txt  main.cpp
Experimenting3/headers/: Clothing.hpp  Pants.hpp  Shirt.hpp  Shoe.hpp  Wardrobe.hpp  catch.hpp
Experimenting3/src/: Clothing.cpp  Pants.cpp  Shirt.cpp  Shoe.cpp  Wardrobe.cpp
Experimenting3/tests/: tests-main.cpp
LinkedList/: Experimenting2.cbp  Makefile  cmake_install.cmake
LinkedList/header/: catch.hpp
LinkedList/src/: ListNode.cpp
LinkedList/test/: linkedTests.cpp  tests-main.cpp
